--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rapidstart",
   "version": "1.0.0",
   "description": "Boilerplat code for react.js, next.js, node.js, and express.js application",
-  "bin": "./bin/cli.js",
+  "bin": {
+    "create-rapid": "./bin/cli.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
